--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <h1>Hadika Malik</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -51,29 +51,20 @@
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          I am a mother and a homemaker at the moment with an Engineering background. I enrolled onto this software development course to change careers and to do something which will allow me to be present for my family as well. I am very hopeful that I will finish this course and determined to get a job in the tech industry as a software developer. 
         </p>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          Since starting this course, I have done quite a few projects. Some were done before fundamentals, some were done during fundamentals and some I am currently doing. Here you can find a link of some of the projects I have done so far.
         </p>
+        <p class="project_link"><a href="https://app.netlify.com/teams/hadika-malik/sites">Link to Projects</a></p>
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
-        </p>
+        <p class="gmail"><a href="mailto:hadikamalik0@gmail.com"><img src="./Images/gmail.png"></a></p>
+        <p class="linkedin"><a href="https://www.linkedin.com/in/hadikamalik/"><img src="./Images/linkedin.png"></a></p>
       </section>
     </main>
     <footer>
