add cards for projects

--- a/Aisha-Athman-Lali-Portfolio/index.html
+++ b/Aisha-Athman-Lali-Portfolio/index.html
@@ -52,47 +52,59 @@
         <div>
           <img class="my-image" src="/images/aisha.jpg">
         </div>
-        <div>
+        <div class="aboutme-text">
           <h2>About Me</h2></header>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?</p>
+          <p>I am a dynamic individual fueled by curiosity and creativity, constantly seeking new horizons and innovative solutions. With a passion for collaboration and a dedication to lifelong learning, I thrive in diverse environments, embracing challenges as stepping stones to growth. As a compassionate advocate for meaningful causes, I strive to leave a positive mark on the world. This portfolio offers a glimpse into my multifaceted identity—a blend of adventure, ingenuity, and unwavering commitment to excellence.
+          </p>
+          <p>I am a future-focused full-stack developer with an insatiable hunger for innovation and a relentless pursuit of excellence. I thrive in collaborative environments, valuing teamwork as a means to harness collective intelligence for achieving outstanding results. I am poised to shape the digital landscape and contribute to the advancement of technology with my skills, dedication, and a commitment to continuous learning.</p>
         </div>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
-        <ul class="showcase">
-          <li class="showcase__item project">
-            <h3 class="project__heading"><a href="https://github.com/CodeYourFuture/HTML-CSS-Challenges-Solution">T-Shirt Order Form</a></h3>
-            <div class="project__blurb">
-              <p>This was exactly as it says: a t-shirt order form, in HTML and CSS. This text is copy-pasted.</p>
-            <p>
-              In this project I learned a whole bunch of foundational principles
-              for front end: I learned how to structure data formally with
-              modern native form inputs, and how to <a href="https://developer.mozilla.org/en-US/docs/Learn/Forms/Form_validation">validate that data client-side</a> with HTML5
-              attributes. The brief was fairly open - the design is all mine,
-              but the Acceptance Criteria was strict: I had to deliver a perfect
-              score in <a href="https://developer.chrome.com/docs/lighthouse/overview/">Lighthouse</a>, and meet some other validation constraints.
-            </p>
-            <p>
-              I spent a lot of time testing my code with <a href="https://developer.chrome.com/docs/devtools/">Devtools</a> and thinking
-              carefully about the semantics of the copy pasted DOM. I also explored the <a href="https://developer.chrome.com/docs/devtools/coverage/">
-              Coverage</a> evaluator and used it to improve my CSS: only delivering
-              precisely what my design needed and no excess code.
-            </p>
-            </div>
-            <picture class="project__picture">
-              <source
-                srcset="https://picsum.photos/seed/picsum/600/600"
-                type="image/webp"
-              />
-              <img
-                src="https://picsum.photos/seed/picsum/600/600"
-                alt="Screenshot of my page showing a form for ordering t-shirts"
-              />
-          </li>
-        </ul>
+        <div class="project-card">
+          <div class="card">
+            <h2>Wireframe</h2>
+            <img src="" alt=""/>
+            <p></p>
+          </div>
+          <div class="card">
+            <h2>Cakes-Co</h2>
+            <img src="" alt=""/>
+            <p></p>
+          </div>
+          <div class="card">
+            <h2>Forms-Control</h2>
+            <img src="" alt=""/>
+            <p></p>
+          </div>
+          <div class="card">
+            <h2>Bicycles for Refugees</h2>
+            <img src="" alt=""/>
+            <p></p>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="card">
+            <h2>Karma Project</h2>
+            <img src="" alt=""/>
+            <p></p>
+          </div>
+          <div class="card">
+            <h2>Shopping Centre</h2>
+            <img src="" alt=""/>
+            <p></p>
+          </div>
+          <div class="card">
+            <h2>Spacesite</h2>
+            <img src="" alt=""/>
+            <p></p>
+          </div>
+          <div class="card">
+            <h2>Birthday Surprise</h2>
+            <img src="" alt=""/>
+            <p></p>
+          </div>
+        </div>
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
