Updated Projects info

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <h1>Areeb Sattar</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -51,28 +51,37 @@
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          My name is Areeb, I am from Multan, Pakistan and I have completed my
+          Civil Engineering in Pakistan in 2018. I have always been keen to
+          learn software development and I believe the opportunity by CYF will
+          help me do that and develop a career in software development. I love
+          to travel and socialize. Photography is also one of my interests.
         </p>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
+        <p>You can find my projects here</p>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          Github Repos
+          <a
+            href="https://github.com/areebsattar?tab=repositories"
+            target="_blank">Click here!</a>
+          <p>Netlify
+          <a href="https://app.netlify.com/teams/areebsattar/sites"
+            target="_blank">Click here!</a>
         </p>
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          Email:
+          <a href="mailto: areebsattar1@gmail.com"> areebsattar1@gmail.com</a>
+        </p>
+        <p>
+          LinkedIn:
+          <a href="https://www.linkedin.com/in/areeb-sattar/" target="_blank"
+            >Areeb Sattar</a
+          >
         </p>
       </section>
     </main>
