--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
-        <div class=contactclass>
+        <div class="contactclass">
 
           <h5>Mobile: +447507550930</h5>
           <h5>Email: haythem00@gmail.com</h5>
