--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
           <h5>Mobile: +447507550930</h5>
           <h5>Email: haythem00@gmail.com</h5>
+          <h5>Manchester</h5>
         </div>
           
       </section>
