Fixed some errors

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       </section>
       <section class="skills">
         <h2 class="headings">My Skills</h2>
+       <div class="skill-flex">
         <p class="description">
           Through my dedication and hard work, I have gained a deep
           understanding of Computer Science and Web Development. By applying my
@@ -123,6 +124,7 @@
           <li class="list-item">PHP</li>
           <li class="list-item">Bootstrap4</li>
         </ul>
+       </div>
       </section>
 
       <section class="projects">
@@ -195,7 +197,7 @@
             <img
               class="project-img portfolio"
               src="/1.webp"
-              alt="Third project image"
+              alt="Third project image-preview"
             />
             <div class="project-card">
               <h4 class="project-heading">Portfolio</h4>
