--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <p>
           Projects:
           <a
-            href="https://areebsattar-personal-home-page.netlify.app/"
+            href="https://app.netlify.com/teams/areebsattar/sites"
             target="_blank"
             >Areeb's Personal Home-page link</a
           >
