fixed some confilts in merging

--- a/example-name-portfolio/index.html
+++ b/example-name-portfolio/index.html
@@ -9,10 +9,10 @@
       content="The technical portfolio of trainee name"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- suppress FOUC-->
+
     <link
       rel="stylesheet"
-      href="/"
+      href="/style.css"
       media="print"
       onload="this.media='all'"
     />
