--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 </head>
 
 <body>
+
+
   <header>
     <h1>Fikret Ellek</h1>
     <nav>
@@ -40,21 +42,39 @@
       </ul>
     </nav>
   </header>
+
+
   <main tabindex="0">
+
+
     <section id="about">
-      <header>
-        <h2>About Me</h2>
-      </header>
-      <p>
-        I am an architect and a software developer trainee. I hope one day I will be able to work on architectural
-        softwares.
-      </p>
+      <h2>About Me</h2>
+      <article>
+        <h3>Personal Information</h3>
+        <p>
+          I am an architect and a software developer trainee. I hope one day I will be able to work on architectural
+          softwares.
+        </p>
+      </article>
+      <article>
+        <h3>Education</h3>
+        <p>
+          I am an architect and a software developer trainee. I hope one day I will be able to work on architectural
+          softwares.
+        </p>
+      </article>
+      <article>
+        <h3>Work Experience</h3>
+        <p>
+          I am an architect and a software developer trainee. I hope one day I will be able to work on architectural
+          softwares.
+        </p>
+      </article>
     </section>
+
     <section id="projects">
-      <header>
-        <h2>Projects Showcase</h2>
-      </header>
-      <div>
+      <h2>Projects Showcase</h2>
+      <article>
         <h2>Architectural Projects</h2>
         <p>
           Domestic Buildings
@@ -66,33 +86,42 @@
           Interior Renovations
         </p>
 
-      </div>
-
-      <div>
+      </article>
+      <article>
         <h2>Software Projects</h2>
-        
         <p>
           Personal Website
         </p>
         <p>
-          other...
+          Bikes For Refugees
         </p>
-      </div>
+        <p>
+          Wireframe
+        </p>
+      </article>
+    </section>
 
-    </section>
     <section id="contact">
-      <header>
-        <h2>Contact me</h2>
-      </header>
-      <p>
-        e-mail
-      </p>
-      <p>
-        tel
-      </p>
+      <h2>Contact me</h2>
+      <article>
+        <p>
+          E-mail
+        </p>
+        <p>
+          LinkedIn
+        </p>
+        <p>
+          Tel
+        </p>
+      </article>
     </section>
+
+
   </main>
+
+
   <footer>
+    
     <h3>
       <a href="https://github.com/CodeYourFuture/Portfolio"><svg focusable="false" role="presentation"
           viewbox="0 0 98 96" width="48" height="48" xmlns="http://www.w3.org/2000/svg">
@@ -102,7 +131,17 @@
         </svg>
         Read me</a>
     </h3>
+    <nav>
+      <ul>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+
   </footer>
+
+
 </body>
 
 </html>
