--- a/index.html
+++ b/index.html
@@ -52,8 +52,13 @@
       <article>
         <h3>Personal Information</h3>
         <p>
-          I am an architect and a software developer trainee. I hope one day I will be able to work on architectural
-          softwares.
+          I am an aspiring architect with a strong passion for software development. Currently, I am embarking on a
+          journey as a software developer trainee, driven by the dream of merging my architectural expertise with
+          cutting-edge technology. My goal is to contribute to the creation of innovative architectural software that
+          simplifies complex design processes, enhances collaboration, and revolutionizes the industry. With a deep
+          understanding of both fields, I aspire to bridge the gap between architecture and technology, creating tools
+          that empower architects worldwide. Through dedication, learning, and hard work, I am determined to make a
+          significant impact in the realm of architectural software development.
         </p>
       </article>
       <article>
@@ -70,6 +75,13 @@
           softwares.
         </p>
       </article>
+
+      <div class="about-imgs">
+        <img src="./images/architecture.jpg" alt="architecture">
+        <img src="./images/arrows.png" alt="arrows">
+        <img src="./images/development.jpg" alt="software development">
+      </div>
+
     </section>
 
     <section id="projects">
@@ -121,7 +133,7 @@
 
 
   <footer>
-    
+
     <h3>
       <a href="https://github.com/CodeYourFuture/Portfolio"><svg focusable="false" role="presentation"
           viewbox="0 0 98 96" width="48" height="48" xmlns="http://www.w3.org/2000/svg">
