main grid deleted, grid added to about section, flex added to footer

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <div class="about-imgs">
         <img src="./images/architecture.jpg" alt="architecture">
-        <img src="./images/arrows.png" alt="arrows">
+        <img class="icon" src="./images/arrows.png" alt="arrows">
         <img src="./images/development.jpg" alt="software development">
       </div>
 
