abaut me section finished

--- a/index.html
+++ b/index.html
@@ -63,23 +63,47 @@
       </article>
       <article>
         <h3>Education</h3>
-        <p>
-          I am an architect and a software developer trainee. I hope one day I will be able to work on architectural
-          softwares.
-        </p>
+        <div class="tl">
+          <p class="tl1 bd">
+            • 2012/2016 Istanbul Science HS
+          </p>
+          <p class="tl2 bd">
+            • 2016/2021 Kocaeli University Architecture
+          </p>
+          <p class="tl3 bd">
+            • 2023/- CYF Software Development BootCamp
+          </p>
+          <div class="tl5">
+          </div>
+        </div>
+
       </article>
       <article>
         <h3>Work Experience</h3>
-        <p>
-          I am an architect and a software developer trainee. I hope one day I will be able to work on architectural
-          softwares.
-        </p>
+        <div class="tl">
+          <p class="tl1 bd">
+            • 2020 Hagia Sophia - Internship
+          </p>
+          <p class="tl2 bd">
+            • 2021/2022 3H Precast Facade - Architect
+          </p>
+          <p class="tl3 bd">
+            • 2022/- Individual Architect
+          </p>
+          <div class="tl5">
+          </div>
       </article>
 
       <div class="about-imgs">
-        <img src="./images/architecture.jpg" alt="architecture">
+        <div class="shadow-img" style="background-image: url(./images/architecture.jpg);">
+        </div>
         <img class="icon" src="./images/arrows.png" alt="arrows">
-        <img src="./images/development.jpg" alt="software development">
+
+        <div class="shadow-img" style="background-image: url(./images/development.jpg);">
+
+        </div>
+
+
       </div>
 
     </section>
