--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>My Portfolio</title>
-    <meta
-      name="description"
-      content="The technical portfolio of trainee name"
-    />
+    <title>Rabia Avci Portfolio</title>
+    <meta name="description" content="The technical portfolio of Rabia Avci" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- suppress FOUC-->
     <style>
@@ -27,18 +24,16 @@
       rel="stylesheet"
       href="style.css"
       media="print"
-      onload="this.media='all'"
-    />
+      onload="this.media='all'" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;800&display=swap"
-      rel="stylesheet"
-    />
+      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;300&display=swap"
+      rel="stylesheet" />
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <h1>Rabia Avci</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -51,10 +46,26 @@
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          I'm Rabia, a Manchester resident since 2017 and a proud mother of two.
+          My background is rooted in architecture, where I developed a passion
+          for design and precision.
+        </p>
+        <p>
+          After years in the field, I've embarked on a new journey as a
+          full-stack developer student at CODE YOUR FUTURE. I'm immersed in the
+          world of HTML, CSS, JavaScript, React, Node.js, and more.
+        </p>
+        <p>
+          My primary drive is to build a stellar portfolio and secure a
+          meaningful role in the tech industry. Each line of code I write fuels
+          my ambition to contribute to innovative solutions. I believe in the
+          endless possibilities that the tech landscape offers and am committed
+          to continuous growth and learning.
+        </p>
+        <p>
+          My family's support and the CODE YOUR FUTURE community inspire me on
+          this exciting path. I'm eager to explore how I can make a lasting
+          impact on the ever-evolving tech world.
         </p>
       </section>
       <section id="projects">
@@ -67,35 +78,58 @@
         </p>
       </section>
       <section id="contact">
-        <header><h2>Contact me</h2></header>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
-        </p>
+        <header><h2>Designed and Built by Rabia Avci</h2></header>
+        <p>..</p>
       </section>
     </main>
     <footer>
+      <!-- Github link -->
       <h3>
-        <a href="https://github.com/CodeYourFuture/Portfolio"
+        <a href="https://github.com/RbAvci"
           ><svg
             focusable="false"
             role="presentation"
             viewbox="0 0 98 96"
             width="48"
             height="48"
-            xmlns="http://www.w3.org/2000/svg"
-          >
+            xmlns="http://www.w3.org/2000/svg">
             <path
               fill-rule="evenodd"
               clip-rule="evenodd"
               d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z"
-              fill="currentColor"
-            />
+              fill="currentColor" />
           </svg>
-          Read me</a
+          Github</a
         >
+      </h3>
+      <!-- Linkedin link -->
+
+      <h3>
+        <a href="https://www.linkedin.com/in/rabia-avci-5231032b/"
+          ><svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24">
+            <path
+              d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+          </svg>
+          Linkedin</a
+        >
+      </h3>
+      <!-- Email link -->
+      <h3>
+        <a href="mailto:rb.avci@gmail.com"
+          ><svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24">
+            <path
+              d="M12 .02c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.99 6.98l-6.99 5.666-6.991-5.666h13.981zm.01 10h-14v-8.505l7 5.673 7-5.672v8.504z" />
+          </svg>
+          Email
+        </a>
       </h3>
     </footer>
   </body>
