projects area styled, photos added

--- a/index.html
+++ b/index.html
@@ -92,15 +92,18 @@
           </p>
           <div class="tl5">
           </div>
+        </div>
+
       </article>
 
       <div class="about-imgs">
-        <div class="shadow-img" style="background-image: url(./images/architecture.jpg);">
+        <div class="div-img shadow-inside" style="background-image: url(./images/architecture.jpg);">
+          <h1 class="hdrTag">ARCHITECTURE</h1>
         </div>
         <img class="icon" src="./images/arrows.png" alt="arrows">
 
-        <div class="shadow-img" style="background-image: url(./images/development.jpg);">
-
+        <div class="div-img shadow-inside" style="background-image: url(./images/development.jpg);">
+          <h1 class="hdrTag">SOFTWARE DEVELOPMENT</h1>
         </div>
 
 
@@ -110,8 +113,8 @@
 
     <section id="projects">
       <h2>Projects Showcase</h2>
-      <article>
-        <h2>Architectural Projects</h2>
+      <article class="archiProjects">
+        <h3>Architectural Projects</h3>
         <p>
           Domestic Buildings
         </p>
@@ -123,8 +126,18 @@
         </p>
 
       </article>
-      <article>
-        <h2>Software Projects</h2>
+
+      <div class="p-images big-image" style="background-image: url(./images/a1.jpg);"></div>
+      <div class="p-images " style="background-image: url(./images/a2.jpg);"></div>
+      <div class="p-images tall-image" style="background-image: url(./images/a3.jpg);"></div>
+      <div class="p-images long-image" style="background-image: url(./images/a4.jpg);"></div>
+      <div class="p-images big-image" style="background-image: url(./images/a5.jpg);"></div>
+      <div class="p-images tall-image" style="background-image: url(./images/a6.jpg);"></div>
+      <div class="p-images" style="background-image: url(./images/a7.jpg);"></div>
+      <div class="p-images big-image" style="background-image: url(./images/a8.jpg);"></div>
+
+      <article class="softProjects">
+        <h3>Software Projects</h3>
         <p>
           Personal Website
         </p>
@@ -135,6 +148,12 @@
           Wireframe
         </p>
       </article>
+
+      <div class="p-images" style="background-image: url(./images/fe.jpg);"></div>
+      <div class="p-images long-image" style="background-image: url(./images/bike.jpg);"></div>
+      <div class="p-images" style="background-image: url(./images/git.jpg);"></div>
+
+
     </section>
 
     <section id="contact">
