--- a/index.html
+++ b/index.html
@@ -129,8 +129,12 @@
         </div>
       </section>
       <section id="contact">
-        <header><h2>Designed and Built by Rabia Avci</h2></header>
-        <p>..</p>
+        <header>
+          <h2>
+            <span style="font-style: italic">Designed </span>and Built by Rabia
+            Avci
+          </h2>
+        </header>
       </section>
     </main>
     <footer>
