--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
     <nav aria-label="Main Site Links" class="c-site-nav">
       <a href="index.html" class="c-site-nav__link">Home</a>
-      <a href="/about.html" class="c-site-nav__link">About</a>
-      <a href="/projects.html" class="c-site-nav__link">My projects</a>
-      <a href="/contact.html" class="c-site-nav__link">Contact</a>
+      <a href="/Portfolio/about.html" class="c-site-nav__link">About</a>
+      <a href="/Portfolio/projects.html" class="c-site-nav__link"
+        >My projects</a>
+      <a href="/Portfolio/contact.html" class="c-site-nav__link">Contact</a>
     </nav>
 
     <main>
