--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@
       media="print"
       onload="this.media='all'"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;800&display=swap"
-      rel="stylesheet"
-    />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Courgette&family=Libre+Baskerville&family=Merriweather:ital,wght@1,300&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <header>
