update my protfolio

--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
       Here are some of the projects, that I have done during my training with CYF so far, you can also explore my Github and
       Netlify for more projects.
       </p>
+      <div class="cards">
+        <a class="card" href="https://fidaa-bashir-website.netlify.app/" target="_blank">
+          <img alt="Personal website" src="https://i.postimg.cc/05hyn94x/Screenshot-2023-10-03-at-22-20-13.png">
+          <span>Personal Website</span>
+        </a>
+        <a class="card" href="https://deploy-preview-475--cyf-bfr.netlify.app/" target="_blank">
+        <img alt="Bikes for Refugees" src="https://i.postimg.cc/zvYXJjKv/Screenshot-2023-10-03-at-22-31-20.png">
+        <span>Bikes for Refugees</span>
     </section>
     <section id="contact">
       <header>
@@ -68,6 +76,12 @@
       <p>
         You can contact me here:-
       </p>
+      <ul>
+        <li><a id="profile-link" target="_blank" href="https://github.com/Fidaabashir89"><i class="github"></i>Github</a></li>
+        <li><a target="_blank"
+            href="https://app.netlify.com/teams/fidaabashir89/sites"><i class="Netlify"></i> Netlify</a></li>
+         <li><a href="mailto:fidaa.bashir89@gmail.com"><i class="Gmail"></i> Gmail</a></li>
+      </ul>
     </section>
   </main>
   <footer>
