Added images, personal information

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+       <h1>Zeliha Pala</h1>
+        <h2 class="job">Full-Stack Developer</h2>
+      </div>
+
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -49,30 +52,69 @@
     </header>
     <main tabindex="0">
       <section id="about">
+        
         <header><h2>About Me</h2></header>
+
+        <img
+          src="image/female-developer-stem-shutterstock.jpg"
+          alt="A developer working on a project"
+        />
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          I've built a rewarding career as an educator in communication,
+          teaching essential skills in diverse academic settings, including
+          schools and a prominent state university. My focus centers on
+          empowering students with vital knowledge for today's
+          information-driven society, emphasizing communication, media literacy,
+          critical news analysis, and ethical practices. In addition to
+          teaching, I've ventured into customer relationship management and
+          sales for esteemed companies. My role has been pivotal in fostering
+          strong client relationships, consistently exceeding sales targets, and
+          driving revenue growth. I align our offerings with client needs,
+          enhancing satisfaction and loyalty. My proficiency in education and
+          sales, combined with strong relationship management, has significantly
+          contributed to the success and expansion of the organizations I've
+          served.
         </p>
       </section>
       <section id="projects">
+        
         <header><h2>Projects Showcase</h2></header>
+
+        <img
+          src="image/school-pupils.jpg"
+          alt="school pupils in a class"
+        />
+        <img
+          src="image/Mass-Communication-College.jpg"
+          alt="Mass communication tools"
+        />
+        <img src="image/WHAT-IS-CUSTOMER-RELATIONSHIP-MANAGEMENT.jpg" alt="CUSTOMER RELATIONSHIP TOOLS" />
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          Media Ethics Symposium: Organize a campus-wide event to explore
+          ethical dilemmas in media, encouraging in-depth discussions among
+          communication students.
+        </p>
+        <p>
+          Social Media Campaign Competition: Task students with creating
+          impactful social media campaigns to apply strategic communication
+          concepts in practice.
+        </p>
+        <p>
+          Industry Insights Series": Invite communication professionals for
+          guest lectures, giving students real-world perspectives and networking
+          opportunities in the field.
+        </p>
+        <p>
+          Research Showcase: Encourage students to present their communication
+          research projects, fostering critical analysis and scholarly
+          engagement within the faculty.
         </p>
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          "Feel free to reach out to me for any inquiries or collaboration
+          opportunities. I look forward to connecting with you.
         </p>
       </section>
     </main>
