Added a grid layout and reorganized images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="The technical portfolio of trainee name"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- suppress FOUC-->
+    <!-- suppress FOCUS-->
     <style>
       html {
         animation: fade-in 1s;
@@ -117,6 +117,14 @@
           opportunities. I look forward to connecting with you.
         </p>
       </section>
+</section>
+      <section id="empty-box ">
+        <header><h2>empty</h2></header>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis quia molestias repudiandae, totam consequuntur explicabo temporibus obcaecati blanditiis animi nostrum?
+        </p>
+      </section>
+
     </main>
     <footer>
       <h3>
