--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
       </section>
     </main>
     <footer>
-      <h3>
-
-      </h3>
+        <div class="footer">
+          <p>&copy; 2023 Zahra.k.b. All Rights Reserved.</p>
+        </div>
     </footer>
   </body>
 </html>
