--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
         <h1>Hello !</h1>
         <p>My name is Zahra</p>
         <p>and I am a Web Developer</p>
+          <div class="social-links">
+          <a href="https://www.facebook.com/zahra.khademi.31/">
+          <i class="fab fa-facebook-f"></i></a>
+          <a href="https://github.com/Zahra-k-b">
+          <i class="fab fa-github"></i></a>
+          <a href="www.linkedin.com/in/zahra-khademi-78567410b">
+          <i class="fab fa-linkedin-in"></i></a>
+      </div>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
@@ -64,16 +72,34 @@
         </p>
       </section>
       <section id="contact">
+        <div id="conteneur-contact">
+        <div class="contact">
         <header><h2>Contact me</h2></header>
-        <div class="social-links">
-          <a href="https://www.facebook.com/zahra.khademi.31/">
-          <i class="fab fa-facebook-f"></i></a>
-          <a href="https://github.com/Zahra-k-b">
-          <i class="fab fa-github"></i></a>
-          <a href="www.linkedin.com/in/zahra-khademi-78567410b">
-          <i class="fab fa-linkedin-in"></i></a>
+          <form name="formulaire" method="POST" action="">
+            <div class="input">
+              <h3>*Name</h3>
+              <input type="text" name="nom" />
+            </div>
+            <div class="input">
+              <h3>*Email</h3>
+              <input type="email" name="email" />
+            </div>
+            <div class="input">
+              <h3>*Object</h3>
+              <input type="text" name="nom" />
+            </div>
+            <div class="input">
+              <h3>*Message</h3>
+              <textarea name="message"></textarea>
+            </div>
+            <div class="input">
+              <input type="submit" value="Submit">
+            </div>
+          </form>
+        </div>
       </div>
       </div>
+    
         
       </section>
     </main>
