adding my projects

--- a/index.html
+++ b/index.html
@@ -62,17 +62,56 @@
           <i class="fab fa-linkedin-in"></i></a>
       </div>
       </section>
+
       <section id="projects">
-        <header><h2>Projects Showcase</h2></header>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
-        </p>
+        <h2>My Projects</h2>
+        <div class="portfolio-container">
+      <article class='card'>
+        <img src='images/PW.png' alt="page">
+        <div class="text-container">
+          <a href="https://zahra-personal-page.netlify.app/">Personal Page</a>
+        </div>
+      </article>
+
+      <article class='card'>
+        <img src='images/wff.png' alt="page">
+        <div class="text-container">
+          <a href="https://deploy-preview-82--cyf-module-html-css.netlify.app/wireframe">Wireframe</a>
+        </div>
+      </article>
+
+      <article class='card'>
+        <img src='images/form.png' alt="app">
+        <div class="text-container">
+          <a href="https://zahra-k-b-form-controls.netlify.app/form-controls/">Form</a>
+        </div>
+      </article>
+
+      <article class='card'>
+        <img src='images/form.png' alt="app">
+        <div class="text-container">
+          <a href="https://zahra-k-b-form-controls.netlify.app/form-controls/">Form</a>
+        </div>
+      </article>
+
+      <article class='card'>
+        <img src='images/form.png' alt="app">
+        <div class="text-container">
+          <a href="https://zahra-k-b-form-controls.netlify.app/form-controls/">Form</a>
+        </div>
+      </article>
+
+      <article class='card'>
+        <img src='images/form.png' alt="app">
+        <div class="text-container">
+          <a href="https://zahra-k-b-form-controls.netlify.app/form-controls/">Form</a>
+        </div>
+      </article>
+
       </section>
+
       <section id="contact">
-        <div id="conteneur-contact">
+        <div id="background-contact">
         <div class="contact">
         <header><h2>Contact me</h2></header>
           <form name="formulaire" method="POST" action="">
