--- a/index.html
+++ b/index.html
@@ -67,46 +67,48 @@
         <h2>My Projects</h2>
         <div class="portfolio-container">
       <article class='card'>
-        <img src='images/PW.png' alt="page">
+        <a href="https://zahra-personal-page.netlify.app/"><img src='images/PW.png' alt="page"></a>
         <div class="text-container">
           <a href="https://zahra-personal-page.netlify.app/">Personal Page</a>
         </div>
       </article>
 
       <article class='card'>
-        <img src='images/wff.png' alt="page">
+        <a href="https://homtown-zahra.netlify.app/"><img src='images/hometown.png' alt="app"></a>
+        <div class="text-container">
+          <a href="https://homtown-zahra.netlify.app/">Hometown</a>
+        </div>
+      </article>
+
+      <article class='card'>
+        <a href="https://deploy-preview-82--cyf-module-html-css.netlify.app/wireframe"><img src='images/wff.png' alt="page"></a>
         <div class="text-container">
           <a href="https://deploy-preview-82--cyf-module-html-css.netlify.app/wireframe">Wireframe</a>
         </div>
       </article>
 
       <article class='card'>
-        <img src='images/form.png' alt="app">
+        <a href="https://zahra-k-b-form-controls.netlify.app/form-controls/"><img src='images/form.png' alt="app"></a>
         <div class="text-container">
           <a href="https://zahra-k-b-form-controls.netlify.app/form-controls/">Form</a>
         </div>
       </article>
 
       <article class='card'>
-        <img src='images/form.png' alt="app">
+        <a href="https://deploy-preview-102--cyf-module-html-css.netlify.app/cakes-co//"><img src='images/cake.png' alt="app"></a>
         <div class="text-container">
-          <a href="https://zahra-k-b-form-controls.netlify.app/form-controls/">Form</a>
+          <a href="https://deploy-preview-102--cyf-module-html-css.netlify.app/cakes-co//">Cake.Co</a>
         </div>
       </article>
 
       <article class='card'>
-        <img src='images/form.png' alt="app">
+        <a href="https://deploy-preview-635--cyf-module-project-html-css.netlify.app/store/"><img src='images/store.png' alt="app"></a>
         <div class="text-container">
-          <a href="https://zahra-k-b-form-controls.netlify.app/form-controls/">Form</a>
+          <a href="https://deploy-preview-635--cyf-module-project-html-css.netlify.app/store/">Store</a>
         </div>
       </article>
 
-      <article class='card'>
-        <img src='images/form.png' alt="app">
-        <div class="text-container">
-          <a href="https://zahra-k-b-form-controls.netlify.app/form-controls/">Form</a>
-        </div>
-      </article>
+
 
       </section>
 
