Test - Text & link added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <h1>Hello, I'm Pedram</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -51,29 +51,29 @@
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          Coming from a background in industrial engineering with experience as
+          a quality controller in a factory, I've embarked on an exciting
+          journey into the world of programming. During my university days, I
+          have learnt about programming, and it left an indelible mark on me.
+          However, it wasn't until recently that I decided to fully immerse
+          myself in this field and pursue my passion for software development.
         </p>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          Currently, I'm working on a few projects that not only challenge my
+          technical skills but also reflect my commitment to creating websites
+          that can genuinely help people. My long-term goal is to leverage my
+          unique blend of engineering expertise and programming acumen to make a
+          positive impact on the world through innovative digital solutions.
         </p>
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
-        </p>
+        <a href="https://www.linkedin.com/in/pedram-amani/" target="_blank"
+          >LinkedIn</a
+        >
       </section>
     </main>
     <footer>
